# Multicore-TSNE

./: setup.py
multicore_tsne/: CMakeLists.txt  tsne.cpp
python/: __init__.py
